loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:12: error: not found: value sorteTrouvee
} while (!sorteTrouvee()) 
          ^